--- a/projet301120/projet301120/projet301120.csproj
+++ b/projet301120/projet301120/projet301120.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Client.cs" />
+    <Compile Include="Models\Commande.cs" />
     <Compile Include="Models\Composant.cs" />
     <Compile Include="Models\Pizza.cs" />
     <Compile Include="Views\Accueil.cs">
