--- a/projet301120/projet301120/projet301120.csproj
+++ b/projet301120/projet301120/projet301120.csproj
@@ -58,6 +58,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\CommandeView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\CommandeView.Designer.cs">
+      <DependentUpon>CommandeView.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
